first version non-reactive website done

--- a/solutions.html
+++ b/solutions.html
@@ -194,43 +194,44 @@
                      <ul class="d-block">
                         <li class="d-block  iq-fw-6 mb-2"><a href="index.html" class="text-gray">Home</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="about-us.html" class="text-gray">About</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pages</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Services</a></li>
-                        <li class="d-block  iq-fw-6"><a href="baggage.html" class="text-gray">Blog</a></li>
+                        <!-- <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pages</a></li> -->
+                        <!-- <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Services</a></li> -->
+                        <!-- <li class="d-block  iq-fw-6"><a href="baggage.html" class="text-gray">Blog</a></li> -->
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
                      <h4 class="iq-fw-7 mb-3">Products</h4>
                      <ul class="d-block">
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Integration</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pricing</a></li>
+                        <li class="d-block  iq-fw-6 mb-2"><a href="baggage.html" class="text-gray">Baggage Analytics</a></li>
+<!--                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pricing</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">API</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Documentation</a></li>
-                        <li class="d-block  iq-fw-6"><a href="" class="text-gray">Release Notes</a></li>
+                        <li class="d-block  iq-fw-6"><a href="" class="text-gray">Release Notes</a></li> -->
                      </ul>
                   </div>
-                  <div class="col-lg-2 col-md-6 mb-5 mb-lg-0 mb-md-0">
-                     <h4 class="iq-fw-7 mb-3">Help</h4>
+                  <!-- <div class="col-lg-2 col-md-6 mb-5 mb-lg-0 mb-md-0">
+                     <h4 class="iq-fw-7 mb-3">Contact Us</h4>
                      <ul class="d-block">
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Support</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">FAQs</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="contact-us.html" class="text-gray">Contact Us</a></li>
                      </ul>
-                  </div>
+                  </div> -->
                   <div class="col-lg-6 col-md-6">
-                     <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
+                     <h4 class="iq-fw-7 mb-3">Contact Us</h4>
+<!--                      <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
                      <form>
                         <input type="email" name="" placeholder="Enter Email" class="subscription-email position-relative form-control d-inline-block">
                         <a href="" class="button subscription-button">Sign Up</a>
-                     </form>
+                     </form> -->
                      <ul class="list-inline mb-5">
-                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
+                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">+1 360 207 4159</span></li>
                         <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
                      </ul>
                      <ul class="list-inline">
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li>
-                        <li class="list-inline-item iq-fw-6"><a href="" class="text-gray"><i class="fab fa-linkedin"></i></li>
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li> -->
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li> -->
+                           <li class="list-inline-item iq-fw-6"><a href="https://www.linkedin.com/company/gaussiansolutions/" class="text-gray"><i class="fab fa-linkedin"></i></li>
                      </ul>
                   </div>
                </div>
@@ -239,11 +240,11 @@
                <div class="row">
                   <div class="col-auto mr-auto">
                      <ul class="list-inline">
-                        <li class="list-inline-item mr-3 r-font-12"><a href="#" class="text-gray iq-fw-6">Terms & Conditions</a></li>
-                        <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li>
+                        <!-- <li class="list-inline-item mr-3 r-font-12"><a href="#" class="text-gray iq-fw-6">Terms & Conditions</a></li> -->
+                        <!-- <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li> -->
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Vizion All rights reserved 2019</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
                </div>
             </div>
             <!-- back-to-top -->
