--- a/baggage.html
+++ b/baggage.html
@@ -53,12 +53,7 @@
                                  Solutions
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item active" href="baggage.html">Blog</a>
-                                 <a class="dropdown-item" href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a>
-                                 <a class="dropdown-item" href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a>
-                                 <a class="dropdown-item" href="404-error.html">404 Error</a>
-                                 <a class="dropdown-item" href="comingsoon.html">Coming Soon</a>
-                                 <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
+                                 <a class="dropdown-item" href="baggage.html">Baggage Analytics</a>
                               </div>
                            </li>
                            <li class="nav-item">
@@ -113,15 +108,15 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/technology/Object-detection.png" class="img-fluid banner-rounded-circle" alt="images">
+                     <img src="images/technology/baggage_size.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
-                        <div class="tech-no">01</div>
-                        <h2 class="iq-fw-8 d-inline-block">Object Detection & Tracking</h2>
+                        <!-- <div class="tech-no">01</div> -->
+                        <h2 class="iq-fw-8 d-inline-block">Better Baggage handling with Rapid Analytics</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">The core technology that drives all our solutions is detecting, and tracking the objects in a scene, be it be a person, a bike, a car, a suitcase, a backpack etc. By detecting the objects
-                        of interest in a scene, and tracking them, their dwell time, rich insights are derived.</p>
+                     <p class="iq-fw-6 mb-lg-0 mb-4">Improve baggage handling by adding details like size, color, type, exterior style, manufacturer etc about the baggage. 
+                        Gain insights, and improve turn-around time using the baggage analytics.</p>
                   </div>
                </div>
             </div>
@@ -130,15 +125,17 @@
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/technology/car_counting.PNG" class="img-fluid banner-rounded-circle" alt="images">
+                     <img src="images/baggage/sd_offload_bags.jpg" class="img-fluid banner-rounded-circle" alt="A baggage handler offloading a bag from aircraft">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
-                        <div class="tech-no">02</div>
-                        <h2 class="iq-fw-8 d-inline-block">Vehicle Counting</h2>
+                        <!-- <div class="tech-no">02</div> -->
+                        <h2 class="iq-fw-8 d-inline-block">Faster baggage retrieval, faster turn-around</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">Counting vehicles, and their types simplified. Get real-time insights into occupancy of your parking lot, and off-line analytics on when the facility is being used most. Downstream 
-                        applications include publishing your real-time occupancy to parking aggregators, dynamic pricing, and scheduling maintenance when the facility is least used.
+                     <p class="iq-fw-6 mb-lg-0 mb-4"> When a passenger doesn't make it to a flight, his or her baggage needs to be offloaded. Ground personnel have to get into the 
+                        belly of the beast, and retrieve the baggage, often under time pressure. Finding a bag in the belly without knowing where it is hard, and time consuming leading to flight 
+                        delays. With advanced details about bags, like color, manufacturer, exterior style, baggage handlers can find the baggage quicker, and reduce the turn-around time of the 
+                        aircraft. 
                      </p>
                   </div>
                </div>
@@ -148,16 +145,17 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/technology/license_recognition.png" class="img-fluid banner-rounded-circle" alt="images">
+                     <img src="images/baggage/baggage_struggles.jpg" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
-                        <div class="tech-no">03</div>
-                        <h2 class="iq-fw-8 d-inline-block">License Plate Recognition</h2>
+                        <!-- <div class="tech-no">03</div> -->
+                        <h2 class="iq-fw-8 d-inline-block">Avoid departure delays, Early carryon checin </h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">Our License Plate Recognition algorithm can detect state, license number, and expiry of the tags with greater accuracy than ever before. With the ability to run on a mobile device, and as a cloud algorithm,
-                        we enable automatic gate openers at the parking garages. No more resident, and visitors decals necessary. Simply register the license number as approved, and we do the rest. In addition, we 
-                        enable smart parking enforcement solutions to monitor wider area faster, search for stolen vehicles, etc.
+                     <p class="iq-fw-6 mb-lg-0 mb-4"> When the cabin space on the aircraft is full, or near-full, the passengers take longer to find a space for their bag. In some cases, these bags
+                        need to be collected, and tagged by the ground personnel leading to delays in departures. Real-time carryon bag size, and a digital twin of the cabin space helps to understand
+                        the cabin space available in real-time. When the cabin space is full, the passenger's bags can be taken and tagged at the gate, avoiding delays in boarding, and the departure of the 
+                        flight.
                      </p>
                   </div>
                </div>
@@ -167,21 +165,21 @@
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/technology/baggage_size.png" class="img-fluid banner-rounded-circle" alt="images">
+                     <img src="images/baggage/avoid_lines.jpg" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
-                        <div class="tech-no">04</div>
-                        <h2 class="iq-fw-8 d-inline-block">Baggage Size, and Type</h2>
+                        <!-- <div class="tech-no">04</div> -->
+                        <h2 class="iq-fw-8 d-inline-block">Faster boarding, Depart on time</h2>
                      </div>
-                     <p class="iq-fw-6 mb-lg-0 mb-4">Get fast insights into type, and dimensions of a bag. Enhance baggage check in system with additional information about size, color, and type of material for faster 
-                        recognition and retrieval of bags. Reduce time to unload bags when passengers miss the flight, and improve turn-around times of aircrafts. Use the technology at the boarding gates to monitor
-                        aircraft cabin space, and check in bags that no longer fit in the carryon space. Plus, get rich analytics of bags on a route, and how to optimize operations in that route.
+                     <p class="iq-fw-6 mb-lg-0 mb-4"> Historical data of carryon bags on a route helps ground operations personnel allocation to get the aircraft boarded faster. Real-time
+                        bags analytics help to know when to start tagging bags at the gate, even before passengers get into the jetbridge, and avoid backing up boarding as passengers look 
+                        for space for their bags.
                      </p>
                   </div>
                </div>
             </div>
-         </section>
+         </section><!-- 
          <section class="tech-ptb pb-0">
             <div class="container">
                <div class="row align-items-center">
@@ -201,7 +199,7 @@
                   </div>
                </div>
             </div>
-         </section>
+         </section> -->
 <!--          <section class="tech-ptb">
             <div class="container">
                <div class="row align-items-center flex-row-reverse">
@@ -232,35 +230,36 @@
                      <ul class="d-block">
                         <li class="d-block  iq-fw-6 mb-2"><a href="index.html" class="text-gray">Home</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="about-us.html" class="text-gray">About</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pages</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Services</a></li>
-                        <li class="d-block  iq-fw-6"><a href="baggage.html" class="text-gray">Blog</a></li>
+                        <!-- <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pages</a></li> -->
+                        <!-- <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Services</a></li> -->
+                        <!-- <li class="d-block  iq-fw-6"><a href="baggage.html" class="text-gray">Blog</a></li> -->
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
                      <h4 class="iq-fw-7 mb-3">Products</h4>
                      <ul class="d-block">
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Integration</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pricing</a></li>
+                        <li class="d-block  iq-fw-6 mb-2"><a href="baggage.html" class="text-gray">Baggage Analytics</a></li>
+<!--                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Pricing</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">API</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Documentation</a></li>
-                        <li class="d-block  iq-fw-6"><a href="" class="text-gray">Release Notes</a></li>
+                        <li class="d-block  iq-fw-6"><a href="" class="text-gray">Release Notes</a></li> -->
                      </ul>
                   </div>
-                  <div class="col-lg-2 col-md-6 mb-5 mb-lg-0 mb-md-0">
-                     <h4 class="iq-fw-7 mb-3">Help</h4>
+                  <!-- <div class="col-lg-2 col-md-6 mb-5 mb-lg-0 mb-md-0">
+                     <h4 class="iq-fw-7 mb-3">Contact Us</h4>
                      <ul class="d-block">
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Support</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">FAQs</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="contact-us.html" class="text-gray">Contact Us</a></li>
                      </ul>
-                  </div>
+                  </div> -->
                   <div class="col-lg-6 col-md-6">
-                     <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
+                     <h4 class="iq-fw-7 mb-3">Contact Us</h4>
+<!--                      <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
                      <form>
                         <input type="email" name="" placeholder="Enter Email" class="subscription-email position-relative form-control d-inline-block">
                         <a href="" class="button subscription-button">Sign Up</a>
-                     </form>
+                     </form> -->
                      <ul class="list-inline mb-5">
                         <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">+1 360 207 4159</span></li>
                         <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
@@ -268,7 +267,7 @@
                      <ul class="list-inline">
                         <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li> -->
                         <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li> -->
-                        <li class="list-inline-item iq-fw-6"><a href="https://www.linkedin.com/company/gaussiansolutions/" class="text-gray"><i class="fab fa-linkedin"></i></li>
+                           <li class="list-inline-item iq-fw-6"><a href="https://www.linkedin.com/company/gaussiansolutions/" class="text-gray"><i class="fab fa-linkedin"></i></li>
                      </ul>
                   </div>
                </div>
@@ -277,8 +276,8 @@
                <div class="row">
                   <div class="col-auto mr-auto">
                      <ul class="list-inline">
-                        <li class="list-inline-item mr-3 r-font-12"><a href="#" class="text-gray iq-fw-6">Terms & Conditions</a></li>
-                        <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li>
+                        <!-- <li class="list-inline-item mr-3 r-font-12"><a href="#" class="text-gray iq-fw-6">Terms & Conditions</a></li> -->
+                        <!-- <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li> -->
                      </ul>
                   </div>
                   <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
