changed copyright info + team info

--- a/about-us.html
+++ b/about-us.html
@@ -169,13 +169,13 @@
                   
                   <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                      <div class="team-box">
-                        <img src="images/team/subhash-2.jpg" class="img-fluid" alt="images">
+                        <img src="images/team/subhash-820x819.jpg" class="img-fluid" alt="images">
                         <div class="team-details text-center">
                            <h5 class="iq-fw-8">Subhash Balam</h5>
-                           <h6 class="mb-0">CTO</h6>
+                           <!-- <h6 class="mb-0">CTO</h6> -->
                         </div>
                         <ul class="info-share d-inline">
-                           <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li>
+                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li> -->
                            <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
                            <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-twitter"></i></a></li>
                            <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-google"></i></a></li>
@@ -185,14 +185,14 @@
                   </div>
                   <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                      <div class="team-box">
-                        <img src="images/team/suresh.jpg" class="img-fluid" alt="images">
+                        <img src="images/team/suresh_880x880.jpg" class="img-fluid" alt="images">
                         <div class="team-details text-center">
                            <h5 class="iq-fw-8">Suresh Devalapalli</h5>
-                           <h6 class="mb-0">CEO </h6>
+                           <!-- <h6 class="mb-0">CEO </h6> -->
                         </div>
                         <ul class="info-share d-inline">
                            <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li> -->
-                           <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li>
+                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li> -->
                            <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-google"></i></a></li> -->
                            <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-github"></i></a></li> -->
                         </ul>
@@ -200,13 +200,13 @@
                   </div>
                   <div class="col-lg-4 col-md-6 mb-5 mb-md-0 mb-lg-0">
                      <div class="team-box">
-                        <img src="images/team/seshu_2.jpg" class="img-fluid" alt="images">
+                        <img src="images/team/rakesh.jpg" class="img-fluid" alt="images">
                         <div class="team-details text-center">
-                           <h5 class="iq-fw-8">Seshu Kunapuli</h5>
-                           <h6 class="mb-0">CPO</h6>
+                           <h5 class="iq-fw-8">Rakesh Kumar</h5>
+                           <!-- <h6 class="mb-0">CPO</h6> -->
                         </div>
                         <ul class="info-share d-inline">
-                           <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li>
+                           <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-linkedin"></i></a></li> -->
                            <!-- <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
                            <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-twitter"></i></a></li>
                            <li class="list-inline-item"><a href="javascript:void(0)"><i class="fab fa-google"></i></a></li>
@@ -297,7 +297,7 @@
                         <!-- <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li> -->
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">(C) 2022 Gaussian Solutions - All rights reserved </a></div>
                </div>
             </div>
             <!-- back-to-top -->
