--- a/index.html
+++ b/index.html
@@ -193,15 +193,15 @@
                   <div class="col-lg-12">
                      <div class="title-box">
                         <h2 class="title">What's New</h2>
-                        <!-- <p class="sub-title">Gaussian Solutions runners up in GSA Eula 2020 AI/ML challenge</p> -->
-                        <h4 class="sub-title">Gaussian Solutions runners up in GSA EULA 2020 AI/ML challenge</h4>
+                        <!-- <p class="sub-title">Gaussian Solutions runners up in GSA Eula 2022 AI/ML challenge</p> -->
+                        <h4 class="sub-title">Gaussian Solutions runners up in GSA EULA 2022 AI/ML challenge</h4>
                      </div>
                   </div>
                </div>
                <div class="row justify-content-around">
                   <div class="col-lg-6">
                      <h2 class="mb-3 iq-fw-8">Faster Agreements with AI</h2>
-                     <p class="mb-5">Gaussian Solutions is proud to announce that we stood runners up in <a href="https://www.challenge.gov/challenge/GSA-artificial-intelligence-AI-machine-learning-ML-challenge/"> GSA AI/ML 2020 EULA Challenge</a>. We used Natural Language Processing, and Machine Learning to flag clauses in an End User License Agreements(EULA) that are unacceptable for GSA. The same technology can be used to expedite convergence of agreements between parties, flag anamolies in transactions, classify documents etc. Let us help your business reduce risk, time, and money spent on agreements.</p>
+                     <p class="mb-5">Gaussian Solutions is proud to announce that we stood runners up in <a href="https://www.challenge.gov/challenge/GSA-artificial-intelligence-AI-machine-learning-ML-challenge/"> GSA AI/ML 2022 EULA Challenge</a>. We used Natural Language Processing, and Machine Learning to flag clauses in an End User License Agreements(EULA) that are unacceptable for GSA. The same technology can be used to expedite convergence of agreements between parties, flag anamolies in transactions, classify documents etc. Let us help your business reduce risk, time, and money spent on agreements.</p>
                      <a href="mailto:info@gaussiansolutions.com" class="button mb-5 mb-lg-0">Contact Us</a>
                   </div>
                   <div class="col-lg-5">
@@ -554,7 +554,7 @@
                         <!-- <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li> -->
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">(C) 2022 Gaussian Solutions - All rights reserved </a></div>
                </div>
             </div>
             <!-- back-to-top -->
