--- a/baggage.html
+++ b/baggage.html
@@ -289,7 +289,7 @@
                         <!-- <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li> -->
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">(C) 2022 Gaussian Solutions - All rights reserved </a></div>
                </div>
             </div>
             <!-- back-to-top -->
